2001-02-08  Fatih Demir	<kabalak@kabalak.net>

	* components/services/install/lib/eazel-package-system-rpm3.c:
		Include locale.h as you use localeconv() without including
		 it -- bad on debian...

2001-02-08  John Sullivan  <sullivan@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>

	* src/nautilus-sidebar-title.c:
	(nautilus_sidebar_title_size_allocate): Found useful
	optimization while investigating sidebar flashiness:
	now it only recomputes the sidebar font in
	size_allocate if the width actually changed.

2001-02-08  Robin * Slomkowski  <rslomkow@eazel.com>

	* nautilus.spec.in: updated to note that
	/usr/share/hyperbola/maps/*.map have moved to
	/usr/share/nautilus/components/hyperbola/maps/*.map

2001-02-08  John Sullivan  <sullivan@eazel.com>

	Fixed bug 6421 (Labels for permissions should look insensitive
	when permissions are not settable)

	* src/file-manager/fm-properties-window.c:
	(add_permissions_column_label), (create_permissions_page):
	Pass file parameter into add_permissions_column_label,
	set insensitive if can't set permissions.

	* libnautilus-extensions/nautilus-file.c:
	(nautilus_file_get_string_attribute_with_default):
	Use "--" as item count string instead of "..." when
	the preference is set to not display the item counts.
	("..." implied that it would show up eventually, not 
	true in this case.)
	
2001-02-08  Laszlo Kovacs  <laszlo.kovacs@sun.com>
	* components/help/Makefile.am:

	Man page map file moved to new hyperbola data
	directory.

        * components/help/hyperbola-filefmt.c:

	Compiler warnings fixed

2001-02-08  Laszlo Kovacs  <laszlo.kovacs@sun.com>
	* components/help/hyperbola-filefmt.c:

	Toplevel document support added. Docs specified in
	$(prefix)/share/nautilus/components/hyperbola/topleveldocs.xml
	will be added to the toplevel section of the help tree if
	Scrollkeeper is enabled
	
	* components/help/Makefile.am:

	topleveldocs.xml installed and hyperbola data directory